@@ -359,13 +359,13 @@ IF(VISP_HAVE_X11)
   LIST(APPEND SRC_DEVICE_DISPLAY device/display/vpDisplayX.cpp)
 ENDIF()
 
-IF(WIN32)
+IF(VISP_HAVE_GDI OR VISP_HAVE_D3D9)
   LIST(APPEND SRC_DEVICE_DISPLAY device/display/windows/vpDisplayWin32.cpp)
+  LIST(APPEND SRC_DEVICE_DISPLAY device/display/windows/vpWin32API.cpp)
   LIST(APPEND SRC_DEVICE_DISPLAY device/display/windows/vpWin32Window.cpp)
 ENDIF()
 IF(VISP_HAVE_GDI)
   LIST(APPEND SRC_DEVICE_DISPLAY device/display/windows/vpGDIRenderer.cpp)
-  LIST(APPEND SRC_DEVICE_DISPLAY device/display/windows/vpWin32API.cpp)
   LIST(APPEND SRC_DEVICE_DISPLAY device/display/windows/vpDisplayGDI.cpp)
 ENDIF()
 IF(VISP_HAVE_D3D9)
