@@ -90,17 +90,7 @@ void
 vpIoTools::getUserName(std::string &username)
 {
   // With MinGW, UNIX and WIN32 are defined 
-#if defined(UNIX) && defined(WIN32)  
-  // Get the user name.
-  char *_username = NULL;
-  _username = ::getenv("USERNAME");
-  if (_username == NULL) {
-    vpERROR_TRACE( "Cannot get the username. Check your LOGNAME environment variable" );
-    throw(vpIoException(vpIoException::cantGetUserName,
-			"Cannot get the username")) ;
-  }
-  username = _username;
-#elif defined UNIX 
+#if defined UNIX
   // Get the user name.
   char *_username = NULL;
   _username = ::getenv("LOGNAME");
