@@ -9,11 +9,14 @@
 ViSP 2.6.3 (under development)
   - New features
   - Improvements
-    - MinGW supported.
+    - MinGW is now supported but since MinGW currently doesn't support tls
+      __declspec(thread) with vpDisplayGDI it is possible to open only
+      one display.
   - Examples
   - Bug fixed
-    - [14646] ViSP doesn't built on Windows with MinGW
+    - [14646] ViSP doesn't build on Windows with MinGW
     - [14651] Build error arround vpMatrix::pseudoInverse() with OpenCV 2.1.0
+    - [14661] Build error when GDI is not detected or turned off
 
 ----------------------------------------------
 ViSP 2.6.2 (released July 15, 2012)
